--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+*.txt
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
