--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
-runtime: nodejs16
+env: flex
+runtime: nodejs
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
