--- a/package.json
+++ b/package.json
@@ -1,50 +1,34 @@
 {
   "name": "spinner_wheel",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://zackariahshone.github.io/spinnerWheelVolunteer/",
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "gh-pages": "^5.0.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.1",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
-    "react-wheel-of-prizes": "^1.0.9",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+  "version": "1.0.0",
+  "description": "https://zackariahshone.github.io/spinnerWheelVolunteer/",
+  "main": "client/index.js",
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/server.js",
+    "develop": "concurrently \"cd backend && npm run watch\" \"cd client && npm start\"",
+    "install": "cd backend && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build",
+    "type": "modules",
+    "create-env": "printenv > .env"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zackariahshone/spinnerWheelVolunteer.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "zackariah shone",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zackariahshone/spinnerWheelVolunteer/issues"
+  },
+  "homepage": "https://github.com/zackariahshone/spinnerWheelVolunteer#readme",
+  "dependencies": {
+    "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
+    "http-proxy-middleware": "^2.0.6",
+    "nodemon": "^2.0.21"
   }
 }
