--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "private": "true",
-  "proxy": "http://localhost:5000",
+  "allowedhosts": "all",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -15,6 +15,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.2"
+    "mongoose": "^6.7.3"
   }
 }
