main working now

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-wheel-of-prizes": "^1.0.9",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
